fixed stock notification alignment on variable product

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1068,8 +1068,8 @@ a:focus,.focus a{
 				}
 				.stock{
 					&.out-of-stock{
-						margin-top: 8px;
-						right: 200px;
+						margin-top: 10px;
+						right: 210px;
 					}
 				}
 				.bundled_product_summary{
